fix(corpus_search): tweak focus style of operators modal trigger button
Two issues fixed:

- When the button to open the operators modal was focused,
  the input container was also highlighted.
- The contrast of the ring with the background was too low,
  so it was slightly darkened.

--- a/cl/assets/tailwind/input.css
+++ b/cl/assets/tailwind/input.css
@@ -112,6 +112,6 @@
     @apply text-xl text-greyscale-700 font-normal;
   }
   .focus-container {
-    @apply [&:has(*:focus)]:outline [&:has(*:focus)]:outline-2 [&:has(*:focus)]:outline-primary-600 flex;
+    @apply [&:has(input:focus)]:outline [&:has(input:focus)]:outline-2 [&:has(input:focus)]:outline-primary-600 flex;
   }
 }
